Corregir enlace a post XCI

--- a/proyectos.qmd
+++ b/proyectos.qmd
@@ -9,7 +9,7 @@ Conoce en qué temas estamos trabajando.
 
 - Dinámica poblacional del sistema Ameba, Mimivirus, Virófago, Transpovirón.
 - [Factores autosómicos implicados en la inactivación del cromosoma
-  X](https://biologia-computacional.github.io/posts/2023/10/inactivacion-x/).
+  X](/posts/2023/inactivacion-x.md).
 - Representación del ADN en aplicaciones de Machine Learning.
 - Espaciadores autodirigidos y nuevas funciones de los sistemas CRISPR.
 
