Añadir referencia adicional

--- a/posts/2023/xci.bib
+++ b/posts/2023/xci.bib
@@ -25,3 +25,18 @@
   urldate = {2023-12-03},
   langid = {english}
 }
+@article{lyon1961,
+  title = {Gene {{Action}} in the {{X-chromosome}} of the {{Mouse}} ({{Mus}} Musculus {{L}}.)},
+  author = {Lyon, Mary F.},
+  year = {1961},
+  month = apr,
+  journal = {Nature},
+  volume = {190},
+  number = {4773},
+  pages = {372--373},
+  publisher = {{Nature Publishing Group}},
+  issn = {1476-4687},
+  doi = {10.1038/190372a0},
+  urldate = {2023-10-09},
+  copyright = {1961 Springer Nature Limited},
+}
