Añdir imagen Doudna y Charpentier

--- a/posts/2024/proyecto-crispr/refs.bib
+++ b/posts/2024/proyecto-crispr/refs.bib
@@ -22,3 +22,13 @@
   doi = {10.3389/fmicb.2019.03078},
   urldate = {2022-10-30}
 }
+@misc{alcalde2020,
+  title = {{Premio Nobel de Qu{\'i}mica 2020 para las inventoras de las "tijeras gen{\'e}ticas"}},
+  author = {Alcalde, Sergi},
+  year = {2020},
+  month = oct,
+  journal = {www.nationalgeographic.com.es},
+  urldate = {2024-04-13},
+  howpublished = {https://www.nationalgeographic.com.es/ciencia/premio-nobel-quimica-2020-para-inventoras-tijeras-geneticas\_15961},
+  langid = {spanish}
+}
