Añadir .ics del club-de-revista

--- a/club-de-revista.qmd
+++ b/club-de-revista.qmd
@@ -29,3 +29,5 @@ cdr |> gt() |>
   fmt_markdown(columns = c(Artículo)) |>
   cols_width( Artículo ~ pct(35) )
 ```
+[Descarga el archivo iCal para añadir este evento a tu
+calendario](club-de-revista.ics)
