--- a/proyectos.qmd
+++ b/proyectos.qmd
@@ -1,6 +1,7 @@
 ---
 title: "Proyectos ![](/imgs/undraw_pair_programming.svg){width=120px}"
 date-modified: last-modified
+comments: false
 ---
 
 Conoce en qué temas estamos trabajando.
