Reorganizar material educativo

--- a/cursos/material-educativo/enlaces.qmd
+++ b/cursos/material-educativo/enlaces.qmd
@@ -23,6 +23,7 @@ biológicos](https://elixir-europe.org/what-we-offer/guidelines)\
 Computacional](https://elixir-europe.org/what-we-offer/portals)\
 {{<fa globe>}} [Buscador de cursos, eventos, videos, presentaciones, manuales y
 mucho más](https://tess.elixir-europe.org/)\
+{{<fa globe>}} [Material educativo del NCBI](https://www.ncbi.nlm.nih.gov/home/learn/)\
 
 ## Biología estructural
 
@@ -52,3 +53,8 @@ AlphaFold](https://www.ebi.ac.uk/training/online/courses/alphafold/)
 ## Bases de datos
 
 {{<fa globe>}} [Databases and SQL](https://swcarpentry.github.io/sql-novice-survey/)
+
+## Filogenética
+
+{{<fa globe>}} [Tutoriales y cursos de bioinformática y filogenética en
+Español](https://www.ccg.unam.mx/~vinuesa/Tutoriales_y_cursos_bioinfo_filogen%C3%A9tica_espa%C3%B1ol_PV.html)
