--- a/index.qmd
+++ b/index.qmd
@@ -69,9 +69,11 @@ Computacional](https://caseybergman.wordpress.com/2012/07/31/top-n-reasons-to-do
 # Pertenencia al grupo
 
 Para hacer parte del grupo de Biología Computacional no se necesita ningún
-requisito excepto mucha motivación e interés por el tema. Así que si te gusta
-trastear con computadores, o te interesa la programación y el mundo digital y
-además eres un apasionado de la Biología este grupo es para ti.
+requisito, no necesitas saber nada, ni tener ninguna experiencia, lo que sí
+es extremadamente importante es que tengas mucha motivación, interés, ganas
+de aprender y que seas una persona comprometida y responsable. Así que si te
+gusta trastear con computadores, o te interesa la programación y el mundo
+digital y además eres un apasionado de la Biología este grupo es para ti.
 
 El hecho de pertenecer a otro grupo no te impide unirte a nuestro grupo de
 Biología Computacional, por el contrario, nos encanta la posibilidad de formar
