--- a/cursos/material-educativo/scRNA-seq/index.qmd
+++ b/cursos/material-educativo/scRNA-seq/index.qmd
@@ -17,7 +17,7 @@ listing:
 bibliography: refs.bib
 ---
 
-![@guruprasad2020](https://www.researchgate.net/publication/347823832/figure/fig1/AS:11431281175996093@1689980864604/scRNA-seq-versus-bulk-RNA-seq-for-profiling-the-TME-A-and-B-Transcriptomic-studies-of.png)
+![@guruprasad2020](https://www.researchgate.net/publication/347823832/figure/fig1/AS:11431281175996093@1689980864604/scRNA-seq-versus-bulk-RNA-seq-for-profiling-the-TME-A-and-B-Transcriptomic-studies-of.png){.preview-image}
 
 Para explicar la diferencia entre bulk RNA-seq y single cell RNA-seq se usa
 la analogía con un batido de frutas vs. una ensalada de frutas. En el batido
