--- a/cursos/material-educativo/scRNA-seq/umi/index.qmd
+++ b/cursos/material-educativo/scRNA-seq/umi/index.qmd
@@ -12,6 +12,6 @@ UMI son las siglas de Unique Molecular Identifier (Identificador Molecular
 añaden a las moléculas de ARN que se van a secuenciar para identificarlas de
 manera única.
 
-![@geneious](https://help.geneiousbiologics.com/hc/article_attachments/8234399911316)
+![@geneious](https://help.geneiousbiologics.com/hc/article_attachments/8234399911316){.preview-image}
 
 Al ser secuencias de 14 pares de bases, podemos tener $4^{14}$ diferentes UMIs.
