Añadir info reunión

--- a/bienvenida.qmd
+++ b/bienvenida.qmd
@@ -6,6 +6,19 @@ A continuación encontrarás las pautas para participar en el grupo.
 
 Las reuniones del grupo son de altísima importancia, y brindan la
 oportunidad de resolver problemas juntos y de compartir y discutir ideas.
+En nuestra reunión de grupo generalmente discutimos asuntos sobre los
+proyectos del grupo, hacemos ensayos de presentaciones, presentamos y
+discutimos nuevos resultados que hayamos obtenido, socializamos problemas
+con los que nos hayamos encontrado o simplemente discutimos asuntos internos
+del grupo.
+
+Esta es la información sobre la reunión del grupo para el semestre
+**2024-1**:
+
+**Hora:** Viernes 12:00 - 14:00\
+**Lugar:** Salón 7-325, Instituto de Biología, Universidad de Antioquia
+
+## Guía de conducta
 
 Como parte del grupo se espera que tú:
 
