--- a/members/current/juan-camilo-arboleda-rivera/index.qmd
+++ b/members/current/juan-camilo-arboleda-rivera/index.qmd
@@ -37,3 +37,19 @@ Estoy principalmente interesado en áreas como la Biología Computacional, la
 Biología de Sistemas, Biología Molecular, Genética y Bioinformática. También
 soy un entusiasta de Linux y el Software Libre y me gusta aprender sobre
 programación y sus aplicaciones en Biología.
+
+Me encanta aprender y enseñar, porque estoy convencido de que el
+conocimiento es nuestra posesión más valiosa como humanos y que es lo más
+importante para el desarrollo de las sociedades.
+
+Las matemáticas son mi amor platónico y soy un fan declarado de [Richard
+Feynman](https://es.wikipedia.org/wiki/Richard_Feynman).
+
+## Hobbies
+
+En mis tiempos libres me gusta practicar guitarra y violín, aunque no me
+considero muy bueno en ello. Además me encantan las películas de Godzilla y
+el cine de serie B, como [Yo compré una moto
+vampiro](https://www.filmaffinity.com/es/film353319.html) o
+[Sharknado](https://www.filmaffinity.com/es/film399886.html). También me
+gusta mucho leer y escuchar podcasts.
