--- a/members/current/miguel-angel-tangarife-cardona/index.qmd
+++ b/members/current/miguel-angel-tangarife-cardona/index.qmd
@@ -1,7 +1,7 @@
 ---
 title: Miguel Ángel Tangarife Cardona
 description: Estudiante de pregrado en Biología
-image: miguel-angel-tangarife-cardona.jpg
+image: foto.jpg
 about:
   template: trestles
   links:
