--- a/members/current/david-salomón-bonilla/index.qmd
+++ b/members/current/david-salomón-bonilla/index.qmd
@@ -1,6 +1,7 @@
 ---
 title: David Salomón Bonilla Cárdenas
 description: Estudiante de pregrado en Biología
+image: foto.jpg
 about:
   template: trestles
   links:
