--- a/members/current/isabel-quijano-henao/index.qmd
+++ b/members/current/isabel-quijano-henao/index.qmd
@@ -1,7 +1,7 @@
 ---
 title: Isabel Quijano Henao
 description: Estudiante de pregrado en Biología
-image: isabel-quijano-henao.jpeg
+image: foto.jpg
 about:
   template: trestles
   links:
