--- a/members/current/laura-manuela-builes-cerón/index.qmd
+++ b/members/current/laura-manuela-builes-cerón/index.qmd
@@ -1,7 +1,7 @@
 ---
 title: Laura Manuela Builes Cerón
 description: Estudiante de pregrado en Biología
-image: profile.jpg
+image: foto.jpg
 about:
   template: trestles
   links:
