--- a/members/current/maria-camila-gómez-úsuga/index.qmd
+++ b/members/current/maria-camila-gómez-úsuga/index.qmd
@@ -1,7 +1,7 @@
 ---
 title: Maria Camila Gómez Úsuga
 description: Estudiante de pregrado en Biología
-image: maria-camila-gómez-úsuga.jpeg
+image: foto.jpg
 about:
   template: trestles
   links:
