--- a/members/current/maria-de-los-ángeles-benavides/index.qmd
+++ b/members/current/maria-de-los-ángeles-benavides/index.qmd
@@ -1,7 +1,7 @@
 ---
 title: Maria de los Ángeles Benavides Guaca
 description: Estudiante de pregrado en Biología
-image: maria-de-los-ángeles-benavides.jpg
+image: foto.jpg
 about:
   template: trestles
   links:
