Las leyes de la termodinámica se respetan

--- a/bienvenida.qmd
+++ b/bienvenida.qmd
@@ -2,6 +2,9 @@
 
 A continuación encontrarás las pautas para participar en el grupo.
 
+Antes que nada debes saber que en nuestro grupo respetamos las leyes de la
+termodinámica.
+
 ## Reuniones del grupo
 
 Las reuniones del grupo son de altísima importancia, y brindan la
