Actualizar programación CdR

--- a/club-de-revista.qmd
+++ b/club-de-revista.qmd
@@ -7,8 +7,8 @@ Te invitamos a participar en nuestro club de revista donde discutimos las
 últimas investigaciones y avances de la ciencia. Cualquier persona puede
 asistir.
 
-**Horario:** Miércoles, normalmente de 12 a 1 pm, ocasionalmente de 1 a 2 pm.\
-**Lugar:** Salón 7-305, Instituto de Biología, Universidad de Antioquia
+**Horario:** Viernes de 1 a 2 pm.\
+**Lugar:** Salón 7-325, Instituto de Biología, Universidad de Antioquia
 
 La siguiente es la programación del Club de Revista para el semestre 2024-2:
 
