Cambiar salón CdR

--- a/club-de-revista.qmd
+++ b/club-de-revista.qmd
@@ -8,7 +8,7 @@ Te invitamos a participar en nuestro club de revista donde discutimos las
 asistir.
 
 **Horario:** Viernes de 12 a 1 pm.\
-**Lugar:** Salón 7-325, Instituto de Biología, Universidad de Antioquia
+**Lugar:** Salón 5-118, Escuela de Microbiología, Universidad de Antioquia
 
 La siguiente es la programación del Club de Revista para el semestre 2025-1:
 
